nivasa-macros/tests/trybuild/controller_parameter_extractors_res_namevalue_invalid.rs
use nivasa_macros::{controller, impl_controller};

#[controller("/users")]
struct UsersController;

#[impl_controller]
impl UsersController {
    #[nivasa_macros::post("/create")]
    fn create(#[nivasa_macros::res = "response"] response: String) {
        let _ = response;
    }
}

fn main() {}
